login, email 계정 생성 api 토큰, 유저정보 반환 logger 적용
