# swagger.json
@@ -33,7 +33,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Token"
+                  "$ref": "#/components/schemas/LoginSuccessResponse"
                 }
               }
             }
@@ -44,6 +44,16 @@
               "application/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ValidationError"
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "암호가 틀렸음",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ForbiddenError"
                 }
               }
             }
@@ -85,7 +95,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Token"
+                    "$ref": "#/components/schemas/LoginSuccessResponse"
                   }
                 }
               }
@@ -106,7 +116,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/UserConflictError"
+                  "$ref": "#/components/schemas/ConflictError"
                 }
               }
             }
@@ -121,11 +131,13 @@
         "properties": {
           "email": {
             "type": "string",
-            "required": "true"
+            "required": "true",
+            "example": "kbj7353@naver.com"
           },
           "passWord": {
             "type": "string",
-            "required": "true"
+            "required": "true",
+            "example": "123456"
           }
         }
       },
@@ -133,22 +145,27 @@
         "properties": {
           "email": {
             "type": "string",
-            "required": "true"
+            "required": "true",
+            "example": "kbj7353@naver.com"
           },
           "passWord": {
             "type": "string",
-            "required": "true"
+            "required": "true",
+            "example": "123456"
           },
           "nickName": {
             "type": "string",
-            "required": "true"
+            "required": "true",
+            "example": "lukas"
           }
         }
       },
       "Token": {
         "properties": {
           "token": {
-            "type": "string"
+            "type": "string",
+            "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJuaWNrTmFtZSI6ImtiajczNTMiLCJhdXRoVHlwZSI6ImVtYWlsIiwiYXV0aElkIjoia2JqNzM1M0BuYXZlci5jb20iLCJpYXQiOjE1ODAwNTkyNjIsImV4cCI6MTU4MDA2MDE2MiwiaXNzIjoiYW50LWFwaSJ9.QQ5sHLjC_IQv55Uk6TS-QRNsxbygQc1IWaxnrrGvKok",
+            "description": "JWT 토큰, 리퀘스트 헤더 x-access-token 키의 값으로 토큰을 넣어서 사용"
           }
         }
       },
@@ -193,7 +210,7 @@
           }
         }
       },
-      "UserConflictError": {
+      "ConflictError": {
         "properties": {
           "type": {
             "type": "string",
@@ -201,6 +218,45 @@
           },
           "details": {
             "type": "string"
+          }
+        }
+      },
+      "ResponseUser": {
+        "properties": {
+          "nickName": {
+            "type": "string",
+            "example": "lukas"
+          },
+          "authType": {
+            "type": "string",
+            "example": "email",
+            "enum": ["email", "google", "facebook"]
+          },
+          "authId": {
+            "type": "string",
+            "example": "kbj7353@naver"
+          }
+        }
+      },
+      "LoginSuccessResponse": {
+        "properties": {
+          "token" : {
+            "$ref": "#/components/schemas/Token"
+          },
+          "responseUser": {
+            "$ref": "#/components/schemas/ResponseUser"
+          }
+        }
+      },
+      "ForbiddenError": {
+        "properties": {
+          "type": {
+            "type": "string",
+            "enum": [ "PasswordIncorrectError" ]
+          },
+          "details": {
+            "type": "string",
+            "enum": [ "Password incorrect error" ]
           }
         }
       }
